PLAT-4599] - fix : ui issue on task page (Text overlapping with long universe name)
Summary: Set max-width to 500px and applied text-overflow with ellipsis

Test Plan:
**Test Plan**
Tested Manually

**Screenshot**
{F29143}

Reviewers: kkannan, asathyan, ssutar

Reviewed By: kkannan, asathyan, ssutar

Subscribers: jenkins-bot, ui, yugaware

Differential Revision: https://phabricator.dev.yugabyte.com/D19045

--- a/managed/ui/src/components/tasks/TaskDetail/TaskDetail.scss
+++ b/managed/ui/src/components/tasks/TaskDetail/TaskDetail.scss
@@ -51,8 +51,11 @@
 
     .yb-resource-count-size {
       font-weight: 400;
+      line-height: 36px;
       letter-spacing: -0.02em;
       font-family: 'Rubik', sans-serif;
+      text-overflow: ellipsis;
+      max-width: 500px;
     }
   }
 
